tests/paczka1/fuzzy1/91671710.err
Error in line 28: yx5p7yRBo S298 56,6
Error in line 35: 84B1egH A539 379,3
